--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,12 @@ dependencies {
     // Firebase
     compile 'com.firebase:firebase-client-android:2.3.1+'
 
+    // AWS
+    compile 'com.amazonaws:aws-android-sdk-core:2.+'
+    compile 'com.amazonaws:aws-android-sdk-cognito:2.+'
+    compile 'com.amazonaws:aws-android-sdk-s3:2.+'
+    compile 'com.amazonaws:aws-android-sdk-ddb:2.+'
+
     // Based on
     // http://developer.android.com/training/testing/unit-testing/local-unit-tests.html
     // Unit testing dependencies
