--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,36 +10,44 @@
         android:icon="@drawable/firebase_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
         </activity>
-
         <activity
             android:name=".JoinActivity"
             android:label="@string/app_name" >
             android:windowSoftInputMode="adjustResize|stateVisible" >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <provider
-            android:name="hk.ust.cse.hunkim.questionroom.TagProvider"
+            android:name=".TagProvider"
             android:authorities="hk.ust.cse.hunkim.questionroom.tagdetailsactivity" />
 
-        <activity android:name=".TagDetailsActivity"
-            android:label = "@string/app_name">
-            <intent-filter >
+        <activity
+            android:name=".TagDetailsActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="vnd.android.cursor.item/vnd.cc.tag" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".CommentActivity"
+            android:label="Comments"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="hk.ust.cse.hunkim.questionroom.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
